[package]
name = "krm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
home = "0.5.4"
inquire = "0.5.3"
openssl = "0.10.45"
rpassword = "7.2.0"
serde = { version = "1.0.152", features = ["derive"] }
sqlite = "0.30.3"
structopt = "0.3.26"
toml = "0.7.0"
